[package]
name = "leptos-ethereum-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = "0.8.2"
log = "0.4.27"
send_wrapper = "0.6.0"
serde = "1.0.219"
serde_json = "1.0.140"
wasm-bindgen = { version = "0.2.100" }
web3 = { git = "https://github.com/platonfloria/rust-web3.git", branch="feature/transport-either-to-support-wasm", version = "0.20.0", default-features = false, features = ["http-rustls-tls", "wasm", "eip-1193"] }
